fix: Ensure correct height and spacing for top bar

--- a/src/components/header_menu.styl
+++ b/src/components/header_menu.styl
@@ -9,11 +9,14 @@
     align-items center
     box-shadow var(--shadow1)
     display flex
-    padding 0.5rem 1rem 0.5rem 0
+    padding-left 0rem
+    padding-right 1rem
+    height 3rem
     z-index var(--zIndex-low) // Needed for the drop-shadow to be above the editor area
 
     +small-screen('min')
-        padding 0.5rem 1rem
+        padding-left 1rem
+        padding-right 1rem
 
 .app-icon
 .home-link
